yaml/monitoring/02-prometheus/prometheus/templates/06-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - prometheus.mykloud.lokal
  rules:
  - host: prometheus.mykloud.lokal
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
